<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2010 Felix Bechstein -->
<!-- This file is part of WebSMS. This program is free software; you can 
	redistribute it and/or modify it under the terms of the GNU General Public 
	License as published by the Free Software Foundation; either version 3 of 
	the License, or (at your option) any later version. -->
<!-- This program is distributed in the hope that it will be useful, but 
	WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
	more details. You should have received a copy of the GNU General Public License 
	along with this program; If not, see <http://www.gnu.org/licenses/>. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/appearance_and_behavior">
		<PreferenceScreen android:title="@string/appearance">
			<ListPreference android:title="@string/theme"
				android:key="theme" android:entries="@array/themes"
				android:entryValues="@array/themes_values" android:defaultValue="@string/theme_default" />
		</PreferenceScreen>

		<PreferenceScreen android:title="@string/behavior">

			<CheckBoxPreference android:key="enable_translatege"
				android:title="@string/use_translatege" android:summary="@string/use_translatege_summary" />
			<CheckBoxPreference android:key="enable_offline"
				android:title="@string/use_offline" android:summary="@string/use_offline_summary" />
		</PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/about_">
		<PreferenceScreen android:title="@string/about_"
			android:summary="@string/about_hint">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.About" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/faq_"
			android:summary="@string/faq_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/wiki/FAQ" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/feedback_"
			android:summary="@string/feedback_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/issues/list" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/twitter_"
			android:summary="@string/twitter_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://twitter.com/flx_b" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/more_apps_">
			<intent android:action="android.intent.action.VIEW"
				android:data="market://search?q=pub:&quot;Felix Bechstein&quot;" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/debug_">
		<PreferenceScreen android:key="send_logs"
			android:title="@string/send_logs" android:summary="@string/send_logs_hint" />
	</PreferenceCategory>
</PreferenceScreen>
